# file_pipe_server

./: .gitignore  Cargo.toml  README.md
bruno/: bruno.json  config.bru  health.bru
bruno/task/: all.bru  all_living.bru  analyze.bru  create.bru  remove.bru  show.bru  start.bru  status.bru  stop.bru  template_transfer_local2local.bru  template_transfer_local2oss.bru  template_transfer_oss2local.bru  template_transfer_oss2oss.bru  update.bru
docs/: ToDo.md
src/: main.rs
src/cmd/: mod.rs  rootcmd.rs
src/commons/: convert.rs  fileutiles.rs  filters.rs  mod.rs  notify_utile.rs  processbar.rs  sysutiles.rs
src/configure/: config_global.rs  mod.rs
src/httpserver/: httpserver.rs  mod.rs
src/httpserver/dao/: dao_test.rs
src/httpserver/exception/: error.rs  mod.rs
src/httpserver/handlers/: handler_root.rs  handler_task.rs  handler_task_template.rs  mod.rs
src/httpserver/module/: common_module.rs  mod.rs  module_task.rs  request_module.rs
src/httpserver/routers/: mod.rs  root.rs
src/httpserver/service/: mod.rs  service_mysql.rs  service_redis.rs  service_task.rs  service_task_template.rs
src/logger/: logger.rs
src/modules/: checkpoint.rs  mod.rs
src/resources/: init_resources.rs  mod.rs  resource_rocksdb.rs
src/s3/: mod.rs  oss.rs  oss_client.rs
src/tasks/: compare_local2local.rs  compare_local2oss.rs  compare_oss2local.rs  compare_oss2oss.rs  meta.rs  mod.rs  task.rs  task_actions.rs  task_assistant.rs  task_compare.rs  task_delete.rs  task_errors.rs  task_server.rs  task_status.rs  task_status_saver.rs  task_transfer.rs  task_transfer.rs.bak  transfer_local2local.rs  transfer_local2oss.rs  transfer_oss2local.rs  transfer_oss2oss.rs
src/tasks/compare/: compare_local2local.rs  compare_local2oss.rs  compare_oss2local.rs  compare_oss2oss.rs  mod.rs  task_compare.rs
src/tasks/modules/: checkpoint.rs  record.rs
src/tasks/transfer/: mod.rs  task_transfer.rs  transfer_local2local.rs  transfer_local2oss.rs  transfer_oss2local.rs  transfer_oss2oss.rs
