[package]
name = "file_pipe_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = "4.5.7"
shellwords = "1.1.0"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
rustyline-derive = "0.10.0"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.66"
thiserror = "1.0.64"
futures = "0.3.25"
# ToDo 将 fork 替换为 daemonize
fork = "0.1"
rand = "0.8.5"
walkdir = "2.5.0"
rayon = "1.10.0"
sysinfo = "0.30.12"
rust_decimal = "1.35.0"
axum = { version = "0.7.5", features = ["default", "json"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = [
    "trace",
    "compression-full",
    "auth",
    "fs",
] }
tower = { version = "0.4.13", features = ["timeout"] }
casbin = { version = "2.0.9", default-features = false, features = [
    "runtime-async-std",
    "logging",
    "incremental",
] }
indicatif = "0.17.8"
strum = "0.26.2"
strum_macros = "0.26.4"
once_cell = "1.16.0"
async_once = "0.2.6"
http-body = "^1"
rust-crypto = "0.2.36"
base64 = "0.22.1"
dashmap = "6.0.1"
futures-locks = "0.7.0"
rust-embed = "8.4.0"
hyper = "1.3.1"
hyper-tls = "0.6.0"
curl = "0.4.44"
regex = "1.6.0"
num_cpus = "1.14.0"
signal-hook = { version = "0.3.14", features = ["default", "extended-siginfo"] }
rs-snowflake = "0.6.0"
bincode = "1.3.3"
notify = "6.1.1"

# sudo apt update && sudo apt upgrade
# sudo apt install clang
# sudo apt install llvm
rocksdb = { version = "0.22.0", feature = "multi-threaded-cf" }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

aws-config = { path = "../aws-sdk-rust/sdk/aws-config", features = [
    "behavior-version-latest",
] }
aws-sdk-s3 = { path = "../aws-sdk-rust/sdk/s3" }
aws-credential-types = { path = "../aws-sdk-rust/sdk/aws-credential-types" }
aws-smithy-types = { path = "../aws-sdk-rust/sdk/aws-smithy-types" }
aws-types = { path = "../aws-sdk-rust/sdk/aws-types", feature = [
    "hardcoded-credentials",
] }
